<resources>
    <string name="_2d_measurement">2-Dimensional measurement</string>
    <string name="_3d_measurement">3-Dimensional measurement</string>
    <string name="above_sea_level">Above sea level</string>
    <string name="acceleration">Acceleration</string>
    <string name="action_high_speed">Action (high speed)</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="add_shortcut_directory">Add shortcut directory</string>
    <string name="adobe_deflate">Adobe deflate</string>
    <string name="adobe_rgb">Adobe RGB</string>
    <string name="air_pressure">Pressure</string>
    <string name="alternate_reduced_res_image">Alternate reduced-resolution image</string>
    <string name="ambient_temperature">Ambient temperature</string>
    <string name="aperture">Aperture</string>
    <string name="aperture_priority_ae">Aperture-priority AE</string>
    <string name="app_title">Media Browser</string>
    <string name="artist">Artist</string>
    <string name="auto">Auto</string>
    <string name="auto_bracket">Auto bracket</string>
    <string name="average">Average</string>
    <string name="baseline_jpeg">Baseline JPEG</string>
    <string name="below_sea_level">Below sea level</string>
    <string name="bits_per_sample">Bits per sample</string>
    <string name="black_is_zero">Black is zero</string>
    <string name="brightness">Brightness</string>
    <string name="bulb">Bulb</string>
    <string name="camera_elevation_angle">Camera elevation angle</string>
    <string name="camera_firmware">Camera firmware</string>
    <string name="ccitt_1d">CCITT 1D</string>
    <string name="cell_height">Cell height</string>
    <string name="cell_width">Cell width</string>
    <string name="center_weighted_average">Center-weighted average</string>
    <string name="centered">Centered</string>
    <string name="centimeters">Centimeters</string>
    <string name="cfa_pattern">CFA pattern</string>
    <string name="chunky">Chunky</string>
    <string name="cielab">CIELab</string>
    <string name="cloudy">Cloudy</string>
    <string name="cmyk">CMYK</string>
    <string name="co_sited">Co-sited</string>
    <string name="coding_methods">Coding methods</string>
    <string name="collecting_files">Collecting files</string>
    <string name="color_filter_array">Color filter array</string>
    <string name="color_response_unit">Color response unit</string>
    <string name="color_sequential_area">Color sequential area</string>
    <string name="color_sequential_linear">Color sequential linear</string>
    <string name="color_space">Colorspace</string>
    <string name="component_b">B</string>
    <string name="component_cb">Cb</string>
    <string name="component_cr">Cr</string>
    <string name="component_g">G</string>
    <string name="component_r">R</string>
    <string name="component_y">Y</string>
    <string name="components_configuration">Components configuration</string>
    <string name="compressed_bits_per_pixel">Compressed bits per pixel</string>
    <string name="compression">Compression</string>
    <string name="confidential">Confidential</string>
    <string name="contrast">Contrast</string>
    <string name="cool_white_fluorescent">Cool White Fluorescent</string>
    <string name="copyright">Copyright</string>
    <string name="creative_slow_speed">Creative (slow speed)</string>
    <string name="custom">Custom</string>
    <string name="custom_rendered">Custom rendered</string>
    <string name="datetime">Datetime</string>
    <string name="datetime_digitized">Datetime digitized</string>
    <string name="datetime_original">Datetime original</string>
    <string name="day_white_fluorescent">Day White Fluorescent</string>
    <string name="daylight">Daylight</string>
    <string name="daylight_fluorescent">Daylight Fluorescent</string>
    <string name="delete_shortcut">Delete shortcut</string>
    <string name="depth_map">Depth map</string>
    <string name="depth_map_of_reduced_res_image">Depth map of reduced-resolution image</string>
    <string name="details">Details</string>
    <string name="device_settings_description">Device settings description</string>
    <string name="differential_corrected">Differential corrected</string>
    <string name="digital_camera">Digital camera</string>
    <string name="digital_zoom_ratio">Digital zoom ratio</string>
    <string name="directly_photographed">Directly photographed</string>
    <string name="directory_current">Current directory:</string>
    <string name="directory_up">Directory up</string>
    <string name="distance_close">Close</string>
    <string name="distant">Distant</string>
    <string name="document_name">Document name</string>
    <string name="duration">Duration</string>
    <string name="east">East</string>
    <string name="enhanced_image_data">Enhanced image data</string>
    <string name="error">Error</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_parsing_file">Error parsing file</string>
    <string name="exif_image_height">EXIF image height</string>
    <string name="exif_image_width">EXIF image width</string>
    <string name="exif_version">EXIF version</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="exposure_index">Exposure index</string>
    <string name="exposure_mode">Exposure mode</string>
    <string name="exposure_program">Exposure program</string>
    <string name="exposure_time">Exposure time</string>
    <string name="f_number">F-number</string>
    <string name="file_created_time">File created time</string>
    <string name="file_labels">File labels</string>
    <string name="file_modified_time">File modified time</string>
    <string name="file_name">File name</string>
    <string name="file_not_exists">File does not exist</string>
    <string name="file_path">File path</string>
    <string name="file_size">File size</string>
    <string name="file_sizes">File sizes</string>
    <string name="file_source">File source</string>
    <string name="files">Files</string>
    <string name="fill_order">Fill order</string>
    <string name="film_scanner">Film scanner</string>
    <string name="fine_weather">Fine Weather</string>
    <string name="flash">Flash</string>
    <string name="flash_auto_fired">Auto, Fired</string>
    <string name="flash_auto_fired_red_eye_reduction">Auto, fired, red-eye reduction</string>
    <string name="flash_auto_fired_red_eye_ret_not_detected">Auto, fired, red-eye reduction, return not detected</string>
    <string name="flash_auto_fired_red_eye_return_detected">Auto, fired, red-eye reduction, return detected</string>
    <string name="flash_auto_fired_return_detected">Auto, fired, return detected</string>
    <string name="flash_auto_fired_return_not_detected">Auto, fired, return not detected</string>
    <string name="flash_auto_not_fired">Auto, did not fire</string>
    <string name="flash_auto_not_fired_red_eye">Auto, did not fire, red-eye reduction</string>
    <string name="flash_energy">Flash energy</string>
    <string name="flash_fired">Fired</string>
    <string name="flash_fired_red_eye_reduction">Fired, red-eye reduction</string>
    <string name="flash_fired_red_eye_ret_not_detected">Fired, red-eye reduction, return not detected</string>
    <string name="flash_fired_red_eye_return_detected">Fired, red-eye reduction, return detected</string>
    <string name="flash_fired_return_detected">Fired, return detected</string>
    <string name="flash_fired_return_not_detected">Fired, return not detected</string>
    <string name="flash_no_function">No flash function</string>
    <string name="flash_off_no_function">Off, no flash function</string>
    <string name="flash_off_not_fired">Off, did not fire</string>
    <string name="flash_off_not_fired_return_not_detected">Off, did not fire, return not detected</string>
    <string name="flash_off_red_eye_reduction">Off, red-eye reduction</string>
    <string name="flash_on_fired">On, fired</string>
    <string name="flash_on_not_fired">On, did not fire</string>
    <string name="flash_on_red_eye_reduction">On, red-eye reduction</string>
    <string name="flash_on_red_eye_ret_not_detected">On, red-eye reduction, return not detected</string>
    <string name="flash_on_red_eye_return_detected">On, red-eye reduction, return detected</string>
    <string name="flash_on_return_detected">On, return detected</string>
    <string name="flash_on_return_not_detected">On, return not detected</string>
    <string name="flashpix_version">Flashpix version</string>
    <string name="fluorescent">Fluorescent</string>
    <string name="focal_length">Focal length</string>
    <string name="focal_length_in_35mm">Focal length in 35mm format</string>
    <string name="focal_plane_res_unit">Focal plane resolution unit</string>
    <string name="focal_plane_xres">Focal plane X resolution</string>
    <string name="focal_plane_yres">Focal plane Y resolution</string>
    <string name="free_byte_counts">Free byte counts</string>
    <string name="free_offsets">Free offsets</string>
    <string name="full_resolution_image">Full-resolution image</string>
    <string name="gain_control">Gain control</string>
    <string name="gamma">Gamma</string>
    <string name="gps_altitude">GPS altitude</string>
    <string name="gps_altitude_reference">GPS altitude reference</string>
    <string name="gps_area_info">GPS area information</string>
    <string name="gps_date_stamp">GPS date stamp</string>
    <string name="gps_dest_bearing">GPS destination bearing</string>
    <string name="gps_dest_bearing_ref">GPS destination bearing reference</string>
    <string name="gps_dest_distance">GPS destination distance</string>
    <string name="gps_dest_distance_ref">GPS destination distance reference</string>
    <string name="gps_dest_latitude">GPS destination latitude</string>
    <string name="gps_dest_latitude_hemisphere">GPS destination latitude hemisphere</string>
    <string name="gps_dest_longitude">GPS destination longitude</string>
    <string name="gps_dest_longitude_hemisphere">GPS destination longitude hemisphere</string>
    <string name="gps_differential">GPS differential</string>
    <string name="gps_dop">GPS DOP</string>
    <string name="gps_hpos_error">GPS H positioning error</string>
    <string name="gps_image_dir_ref">GPS image direction reference</string>
    <string name="gps_image_direction">GPS image direction</string>
    <string name="gps_latitude">GPS latitude</string>
    <string name="gps_latitude_hemisphere">GPS latitude hemisphere</string>
    <string name="gps_location">GPS location</string>
    <string name="gps_longitude">GPS longitude</string>
    <string name="gps_longitude_hemisphere">GPS longitude hemisphere</string>
    <string name="gps_map_datum">GPS map datum</string>
    <string name="gps_measure_mode">GPS measure mode</string>
    <string name="gps_processing_method">GPS processing method</string>
    <string name="gps_satellites">GPS satellites</string>
    <string name="gps_speed">GPS speed</string>
    <string name="gps_speed_ref">GPS speed reference</string>
    <string name="gps_status">GPS status</string>
    <string name="gps_timestamp">GPS time stamp</string>
    <string name="gps_track">GPS track</string>
    <string name="gps_track_ref">GPS track reference</string>
    <string name="gray_response_curve">Gray response curve</string>
    <string name="gray_response_unit">Gray response unit</string>
    <string name="halftone_hints">Halftone hints</string>
    <string name="hard">Hard</string>
    <string name="hdr_no_original_saved">HDR (no original saved)</string>
    <string name="hdr_original_saved">HDR (original saved)</string>
    <string name="high">High</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="slideshow">Start slideshow</string>
    <string name="sorting">Sorting</string>
</resources>